# ModuLearn

./: .gitignore  CMakeLists.txt  README.md  generate_data.py
include/: activations.h  layer.h  matrix.h  network.h  utils.h
src/: activations.cpp  layer.cpp  main.cpp  matrix.cpp  network.cpp  predict.cpp  utils.cpp
